[gd_scene load_steps=5 format=2]

[ext_resource path="res://Resources/Sprites/interactables/keyDoor.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Interactables/doorSwitch.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/usePrompt.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.55575, 2.63162 )

[node name="doorSwitch" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -6.98268 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
hframes = 4

[node name="usePrompt" parent="." instance=ExtResource( 3 )]
position = Vector2( -0.0226331, -11.2082 )
[connection signal="body_entered" from="." to="." method="_on_doorSwitch_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_doorSwitch_body_exited"]
